--- a/assets/css/sass/sections/_home.scss
+++ b/assets/css/sass/sections/_home.scss
@@ -1,23 +1,23 @@
-.home.section {
-	
-	.header {
-		
-		@extend %clearfix;
-    
+.home {
+
+  .header {
+
+    @extend %clearfix;
+
     .smile::before {
-	    content: " ";
-	    width: .55em;
-	    height: .5em;
-	    display: inline-block;
-	    background: url('../images/smile.png') no-repeat 2.5% 34%;
-	    background-size: contain;
-	    position: relative;
-	    top: .1em;
-     }
+      content: " ";
+      width: .55em;
+      height: .5em;
+      display: inline-block;
+      background: url('../images/smile.png') no-repeat 2.5% 34%;
+      background-size: contain;
+      position: relative;
+      top: .1em;
+    }
   }
-  
-	.sub-header {
-		width: 95%;
-		float: right;
-	}
+
+  .sub-header {
+    width: 95%;
+    float: right;
+  }
 }
