Add respond-to and modulate landscape css.

--- a/assets/css/sass/_settings.scss
+++ b/assets/css/sass/_settings.scss
@@ -48,3 +48,8 @@ $layout_verticalSidebar_padding: $header_vertical_w;
 // ------------------------------ MEDIA QUERIES
 $LANDSCAPE: "screen and (max-height: 600px) and (orientation: landscape)";
 
+
+$break-smallest: 350px;
+$break-small: 480px;
+$break-medium: 650px;
+$break-large: 1350px;
