--- a/assets/css/sass/elements/_footer.scss
+++ b/assets/css/sass/elements/_footer.scss
@@ -1,48 +1,36 @@
 @mixin footer {
   footer.container {
+    
     height: $footer_h_1;
-
-    @media screen and (max-width: 480px) {
-      height: $footer_h_2;
-    } 
-
-    @media #{$LANDSCAPE} {
-      height: $footer_h_2;
-    } 
+    @include respond-to(small) { height: $footer_h_2; } 
+    @include respond-to(landscape) { height: $footer_h_2; } 
 
     > div {
 
       height: 100%;
 
-      > * {
-        @include vCentered;
-      }
+      > * { @include vCentered; }
 
-      @media screen and (max-width: 650px) {
+      @include respond-to(medium) { 
         display: block;
         width: 100%;
         height: 50%;
       }
     }
     
-    .site-info {
-      float: left;
-    }
+    .site-info { float: left; }
 
     .social-links {
+      
       float: right;
      
       li {
         display: inline-block;
         padding-left: 6px;
 
-        &:hover {
-          cursor: pointer;
-        }
+        &:hover { cursor: pointer; }
 
-        &:first-child {
-          padding-left: 0;
-        }
+        &:first-child { padding-left: 0; }
      
         a {
           width: 32px;
