--- a/assets/css/sass/elements/_grid.scss
+++ b/assets/css/sass/elements/_grid.scss
@@ -7,18 +7,10 @@
 
     // redefine font-size put to 0 on parent a
     font-size: 30px;
+    @include respond-to(medium) { font-size: 22px; }
+    @include respond-to(small) { font-size: 30px; }
 
-    @media screen and (max-width: 650px) {
-      font-size: 22px;
-    }
-
-    @media screen and (max-width: 480px) {
-      font-size: 30px;
-    }
-
-    &:hover {
-      opacity: 1;
-    }
+    &:hover { opacity: 1; }
 
     .details {
       position: absolute;
@@ -27,16 +19,13 @@
 
     .title {
       font-size: 1em;
-
-      @media screen and (max-width: 480px) {
-        font-size: .75em;
-      }      
+      @include respond-to(small) { font-size: .75em; }      
     }
 
     p {
       font-size: 0.5em;
 
-      @media screen and (max-width: 480px) {
+      @include respond-to(small) { 
         margin-top: 1%;
         font-size: .5em;
         line-height: 1.1;
@@ -51,7 +40,7 @@
       img {
         @include transform(translate(0, -33px), scale(0.55));
 
-        @media screen and (max-width: 480px) {
+        @include respond-to(small) { 
           @include transform(translate(0 , -50px), scale(0.8));
         }
       }
@@ -65,22 +54,18 @@
 
 @mixin tileLink {
   .tile {
-    &:hover {
-      cursor: pointer;
-    }
+    
+    &:hover { cursor: pointer; }
 
     a {
       display: block;
       position: relative;
       width: 95%;
+      @include respond-to(small) { width: 100%; }
       margin: auto;
       // remove extra height otherwise adds to tile
       font-size: 0;
       color: inherit;
-
-      @media screen and (max-width: 480px) {
-        width: 100%;
-      }
     }
   }
 }
@@ -94,7 +79,7 @@
     margin-bottom: 4%;
     vertical-align: top;
 
-    @media screen and (max-width: 480px) {
+    @include respond-to(small) {
       margin-bottom: 10%;
       width: 100%;
     }
@@ -103,7 +88,7 @@
 
 @mixin grid {
   .grid {
-    @media screen and (max-width: 650px) {
+    @include respond-to(medium) { 
       padding: 0 0 11%;
     }
 
@@ -113,16 +98,16 @@
       .tile {
         width: 33%;
       
-        @media screen and (max-width: 650px) {
+        @include respond-to(medium) { 
           width: 100%;
           margin: 10% auto;
         }
 
-        @media screen and (max-width: 350px) {
+        @include respond-to(smallest) { 
           width: 100%;
         }
 
-        @media #{$LANDSCAPE} {
+        @include respond-to(landscape) { 
           width: 32%;
           margin: auto;
         }
