--- a/assets/css/sass/elements/_headerWrapper.scss
+++ b/assets/css/sass/elements/_headerWrapper.scss
@@ -1,61 +1,36 @@
 @mixin headerWrapper {
+
+  .header-wrapper {
+
+    .home & { width: percentage(560px/$max_layout_width); }
+    .work & { width: percentage(390px/$max_layout_width); }
+    .about & { width: percentage(530px/$max_layout_width); }
+    .contact & { width: 100%; }
 	
-	@at-root {
-		// -------------- SECTION HOME
-		.home .header-wrapper {
-			width: cp(560px, $max_layout_width);
-		}
-
-		// -------------- SECTION WORK
-		.work .header-wrapper {
-			width: cp(390px, $max_layout_width);
-		}
-
-		// ------------- SECTION ABOUT
-		.about .header-wrapper {
-			width: cp(530px, $max_layout_width);
-		}
-
-		// ----------- SECTION CONTACT
-		.contact .header-wrapper {
-			width: 100%;
-		}
-	}
-
-	.header-wrapper {
 		display: inline-block;
 		padding: 10% 0;
 		text-align: center;
 
-		@media screen and (max-width: 650px) {
+		@include respond-to(medium) {
 			width: 70%;
 			padding: 3% 0;
 		}
 
-		@media screen and (max-width: 480px) {
+		@include respond-to(small) {
 			width: 80%;
 		}
 
-		@media screen and (max-width: 350px) {
+		@include respond-to(smallest) {
 			width: 100%;
 		}
 
-		@media #{$LANDSCAPE} {
+		@include respond-to(landscape) {
 			padding: 3% 0;
 		}
-	}
 
-	@at-root {
-		// ----------- SECTION C0NTACT
-		.contact .header-wrapper {
-
-			@media screen and (min-width: 650px) {
-				text-align: right;
-			}
-
-			@media screen and (max-width: 650px) {
-				width: 100%;
-			}
+		.contact & {
+			@include respond-to(medium-min) { text-align: right; }
+			@include respond-to(medium) { width: 100%; }
 		}
 	}
 }
