--- a/assets/css/sass/sections/_about.scss
+++ b/assets/css/sass/sections/_about.scss
@@ -17,9 +17,7 @@
       width: 80%;
       margin: auto;
 
-      @media screen and (max-width: 480px) {
-        width: 100%;
-      }
+      @include respond-to(small) { width: 100%; }
     }
   }
 }
