--- a/assets/css/sass/elements/_landscapeMenu.scss
+++ b/assets/css/sass/elements/_landscapeMenu.scss
@@ -1,11 +1,28 @@
 @include respond-to(landscape) {
 
-  // TODO test and remake
-  
+  html {
+    content: "hasSideMenu";
+  }  
+
   #site {
     width: calc(100vw - #{$layout_verticalSidebar_padding});
     padding-left: $layout_verticalSidebar_padding;
     overflow: hidden;
+  }
+
+  .state2 #main-header {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: $header_vertical_w;
+    height: 100vh;
+  }
+
+  .state2 #logo {
+    float: right;
+    margin: 0 auto;
+    padding: 4% 0;
+    width: 95%;
   }
 
   #header-nav {
@@ -19,6 +36,7 @@
       height: 100%;
       font-size: .65em;
       text-align: right;
+      @include transformNone;
 
       li {
         width: 90%;
@@ -30,8 +48,12 @@
 
         &.active-link { border-left: 6px solid $link_color2; }
         
-        &:hover {
-          @extend .active-link;
+        &:hover { border-left: 6px solid $link_color2; }
+
+        a {
+          margin: 50% 0 0;
+          padding: 0;
+          line-height: 0;
         }
       }
     }
@@ -39,13 +61,6 @@
     @at-root .mobile .state2 #header-nav .no-touch {
       @media screen and (max-device-height: 600px) and (orientation: landscape) {
         border-left: 6px solid $color1;
-      }
-    }
-
-    a {
-        margin: 50% 0 0;
-        padding: 0;
-        line-height: 0;
       }
     }
 
