--- a/assets/css/sass/elements/_collapsedMenu.scss
+++ b/assets/css/sass/elements/_collapsedMenu.scss
@@ -6,11 +6,9 @@
     a {
       display: block;
       // -------- icon size
-      width: 23px;
-      height: 19px;
+      width: 23px; height: 19px;
       // -------- to avoid jumps on hover
-      padding: 30px;
-      margin: -30px;
+      padding: 30px; margin: -30px;
       background: url('../images/menu.png') no-repeat 30px;
     }
       
