--- a/assets/css/sass/elements/_logo.scss
+++ b/assets/css/sass/elements/_logo.scss
@@ -10,21 +10,18 @@
 
     // ----------------------------- STATE 1
     .state1 & {
-        width: $logo_w_big;
+      
+      width: $logo_w_big;
       padding-top: 40px;
 
-      @include respond-to(medium) {
-        width: 25%;
-      }
+      @include respond-to(medium) { width: 25%; }
 
       @include respond-to(small) {
         margin: 0 auto;
         padding: 2.5% 0;
       }
 
-      @include respond-to(smallest) {
-        width: 20%;
-      }
+      @include respond-to(smallest) { width: 20%; }
 
       @include respond-to(landscape) { 
         width: 18%;
@@ -36,12 +33,11 @@
 
     // ----------------------------- STATE 2
     .state2 & {
+      
       width: $logo_w_small;
       padding-top: 18px;
 
-      @include respond-to(medium) {
-        width: 20%;
-      }
+      @include respond-to(medium) { width: 20%; }
 
       @include respond-to(small) {
         margin: 0 auto;
