--- a/assets/css/sass/layout/_layout.scss
+++ b/assets/css/sass/layout/_layout.scss
@@ -79,7 +79,7 @@ p { padding-bottom: .3em; }
   text-align: center;
   padding: 0 8% 12%;
   @include respond-to(large) {
-     @media screen and (min-width: 650px) {
+     @include respond-to(medium, min) {
         padding: 0 0 12%;
     }
   }
