--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,118 +1,3 @@
-body {
-  background-color: #E9E8E3;
-  color: #3A3A3A; }
-
-#main-header {
-  background-color: #E9E8E3; }
-  #main-header a {
-    color: #3A3A3A; }
-
-.home.section {
-  background-color: #E9E8E3;
-  color: #3A3A3A; }
-  .home.section hr {
-    background-color: #3A3A3A; }
-
-.work.section {
-  background-color: #3A3A3A;
-  color: #E9E8E3; }
-  .work.section hr {
-    background-color: #DF3F54; }
-
-.about.section {
-  background-color: #363B48;
-  color: #E9E8E3; }
-  .about.section hr {
-    background-color: #DF3F54; }
-  .about.section .content hr {
-    background-color: #E9E8E3; }
-
-.contact.section {
-  background-color: #DF3F54;
-  color: #E9E8E3; }
-  .contact.section .header h1:first-child {
-    color: #3A3A3A; }
-  .contact.section .header a {
-    color: #E9E8E3; }
-  .contact.section hr {
-    background-color: #F17C71; }
-
-.footer {
-  background-color: #3A3A3A;
-  color: #E9E8E3; }
-  .footer a {
-    color: #DF3F54; }
-
-body {
-  font-family: "Lato", sans-serif;
-  font-weight: 100;
-  font-size: 16px; }
-  @media screen and (max-width: 250px) {
-    body {
-      font-size: 12px; } }
-  body h1 {
-    font-family: "Dosis", sans-serif;
-    font-weight: 600;
-    font-size: 2em; }
-  body p {
-    line-height: 1.2;
-    letter-spacing: .17px;
-    word-spacing: .12em;
-    font-size: 1em; }
-  body a {
-    font-size: 1em; }
-  body .fittextjs {
-    font-size: 1em; }
-
-#header-nav {
-  font-weight: 700;
-  font-size: 1.1em;
-  text-transform: uppercase; }
-  @media screen and (max-width: 650px) {
-    #header-nav {
-      font-size: 0.8em; } }
-  @media screen and (max-width: 300px) {
-    #header-nav {
-      font-size: .7em; } }
-  #header-nav li.active-link, #header-nav li:hover {
-    font-weight: 900; }
-  #header-nav li:hover {
-    font-weight: 900; }
-
-.section .header h1 {
-  line-height: 1;
-  text-transform: uppercase;
-  white-space: nowrap; }
-
-@media screen and (min-width: 480px) and (max-width: 650px) and (min-device-height: 550px) {
-  .home.section .sub-header {
-    font-size: 1.2em; } }
-
-.about.section {
-  font-size: .9em; }
-  .about.section .content p {
-    word-spacing: .1em; }
-
-.contact.section .header .mail a {
-  color: #E9E8E3; }
-.contact.section .sub-header {
-  font-weight: 400;
-  font-size: .9em; }
-  @media screen and (max-width: 650px) {
-    .contact.section .sub-header {
-      font-weight: 100; } }
-
-@media screen and (max-width: 650px) {
-  footer.container {
-    font-size: 13px; } }
-footer.container .site-info {
-  font-weight: 700;
-  font-size: .95em; }
-  footer.container .site-info a {
-    font-weight: font_weight_boldest; }
-footer.container .social-links {
-  font-size: 0; }
-
 .home .header:before, .container:before, .home .header:after, .container:after {
   content: "";
   display: table; }
@@ -153,6 +38,108 @@ img {
 .img-wrapper {
   height: auto;
   display: block; }
+
+body {
+  background-color: #E9E8E3;
+  color: #3A3A3A; }
+
+#main-header {
+  background-color: #E9E8E3; }
+  #main-header a {
+    color: #3A3A3A; }
+
+.section.home {
+  background-color: #E9E8E3;
+  color: #3A3A3A; }
+  .section.home hr {
+    background-color: #3A3A3A; }
+.section.work {
+  background-color: #3A3A3A;
+  color: #E9E8E3; }
+  .section.work hr {
+    background-color: #DF3F54; }
+.section.about {
+  background-color: #363B48;
+  color: #E9E8E3; }
+  .section.about hr {
+    background-color: #DF3F54; }
+    .content .section.about hr {
+      background-color: #E9E8E3; }
+.section.contact {
+  background-color: #DF3F54;
+  color: #E9E8E3; }
+  .section.contact .hello {
+    color: #3A3A3A; }
+  .section.contact .mail a {
+    color: #E9E8E3; }
+  .section.contact hr {
+    background-color: #F17C71; }
+
+.footer {
+  background-color: #3A3A3A;
+  color: #E9E8E3; }
+  .footer a {
+    color: #DF3F54; }
+
+body {
+  font-family: "Lato", sans-serif;
+  font-weight: 100;
+  font-size: 16px; }
+  @media screen and (max-width: 480px) {
+    body {
+      font-size: 13px; } }
+  body h1 {
+    font-family: "Dosis", sans-serif;
+    font-weight: 600;
+    font-size: 2em; }
+  body p {
+    line-height: 1.2;
+    letter-spacing: .17px;
+    word-spacing: .12em;
+    font-size: 1em; }
+  body a {
+    font-size: 1em; }
+  body .fittextjs {
+    font-size: 1em; }
+
+#header-nav {
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 1.1em; }
+  @media screen and (max-width: 650px) {
+    #header-nav {
+      font-size: 0.8em; } }
+  @media screen and (max-width: 480px) {
+    #header-nav {
+      font-size: .7em; } }
+  #header-nav .active-link, #header-nav li:hover {
+    font-weight: 900; }
+
+.section .header {
+  line-height: 1;
+  text-transform: uppercase;
+  white-space: nowrap; }
+.section.about {
+  font-size: .9em; }
+  .section.about .content p {
+    word-spacing: .1em; }
+.section.contact .sub-header {
+  font-size: .9em;
+  font-weight: 400; }
+  @media screen and (max-width: 650px) {
+    .section.contact .sub-header {
+      font-weight: 100; } }
+
+@media screen and (max-width: 650px) {
+  footer.container {
+    font-size: 13px; } }
+footer.container .site-info {
+  font-weight: 700;
+  font-size: .95em; }
+  footer.container .site-info a {
+    font-weight: font_weight_boldest; }
+footer.container .social-links {
+  font-size: 0; }
 
 .home .header .smile::before {
   content: " ";
@@ -269,6 +256,9 @@ img {
       float: none; } }
 .contact.section .sub-header {
   float: right; }
+  @media screen and (max-width: 480px) {
+    .contact.section .sub-header {
+      float: none; } }
   @media screen and (max-width: 1350px) {
     .contact.section .sub-header {
       width: 44%;
@@ -277,15 +267,6 @@ img {
     .contact.section .sub-header {
       width: 100%;
       margin: 0; } }
-  @media screen and (max-width: 480px) {
-    .contact.section .sub-header {
-      float: none; } }
-  @media screen and (max-height: 600px) and (orientation: landscape) {
-    .contact.section .sub-header {
-      float: right; } }
-@media screen and (max-height: 600px) and (orientation: landscape) {
-  .state2 #sections .contact.section.last {
-    height: calc(100vh - 80px); } }
 
 html {
   height: 100%; }
@@ -642,17 +623,17 @@ p {
   .contact .header-wrapper {
     width: 100%; }
   @media screen and (max-width: 650px) {
-    .header-wrapper {
+    .home .header-wrapper, .work .header-wrapper, .about .header-wrapper, .contact .header-wrapper {
       width: 70%;
       padding: 3% 0; } }
   @media screen and (max-width: 480px) {
-    .header-wrapper {
+    .home .header-wrapper, .work .header-wrapper, .about .header-wrapper, .contact .header-wrapper {
       width: 80%; } }
   @media screen and (max-width: 350px) {
-    .header-wrapper {
+    .home .header-wrapper, .work .header-wrapper, .about .header-wrapper, .contact .header-wrapper {
       width: 100%; } }
   @media screen and (max-height: 600px) and (orientation: landscape) {
-    .header-wrapper {
+    .home .header-wrapper, .work .header-wrapper, .about .header-wrapper, .contact .header-wrapper {
       padding: 3% 0; } }
   @media screen and (min-width: 650px) {
     .contact .header-wrapper {
