--- a/assets/css/sass/layout/_layout.scss
+++ b/assets/css/sass/layout/_layout.scss
@@ -78,6 +78,7 @@ p { padding-bottom: .3em; }
   clear: both;
   text-align: center;
   padding: 0 8% 12%;
+  // TODO check this
   @include respond-to(large) {
      @include respond-to(medium, min) {
         padding: 0 0 12%;
