--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,14 +194,14 @@ footer.container .social-links {
         font-size: .5em;
         line-height: 1.1; } }
 .work #portfolio .tile:hover img {
-  -webkit-transform: translate(0, -33px) scale(0.55);
-  -ms-transform: translate(0, -33px) scale(0.55);
-  transform: translate(0, -33px) scale(0.55); }
+  -webkit-transform: translate(0, -33px), scale(0.55);
+  -ms-transform: translate(0, -33px), scale(0.55);
+  transform: translate(0, -33px), scale(0.55); }
   @media screen and (max-width: 480px) {
     .work #portfolio .tile:hover img {
-      -webkit-transform: translate(0, -50px) scale(0.8);
-      -ms-transform: translate(0, -50px) scale(0.8);
-      transform: translate(0, -50px) scale(0.8); } }
+      -webkit-transform: translate(0, -50px), scale(0.8);
+      -ms-transform: translate(0, -50px), scale(0.8);
+      transform: translate(0, -50px), scale(0.8); } }
 .work #portfolio .tile img {
   -webkit-transition: transform 0.4s;
   -ms-transition: transform 0.4s;
@@ -488,12 +488,9 @@ p {
     .state1 #header-nav.expanded {
       visibility: visible;
       opacity: 1;
-      -webkit-transition: visibility 0s linear 0.5s;
-      -ms-transition: visibility 0s linear 0.5s;
-      transition: visibility 0s linear 0.5s;
-      -webkit-transition: opacity 0.5s linear;
-      -ms-transition: opacity 0.5s linear;
-      transition: opacity 0.5s linear; }
+      -webkit-transition: visibility 0s linear 0.5s, opacity 0.5s linear;
+      -ms-transition: visibility 0s linear 0.5s, opacity 0.5s linear;
+      transition: visibility 0s linear 0.5s, opacity 0.5s linear; }
       @media screen and (max-width: 480px) {
         .state1 #header-nav.expanded {
           margin: 10% 0; } }
@@ -501,34 +498,25 @@ p {
     display: none;
     visibility: hidden;
     opacity: 0;
-    -webkit-transition: visibility 0s linear 0.5s;
-    -ms-transition: visibility 0s linear 0.5s;
-    transition: visibility 0s linear 0.5s;
-    -webkit-transition: opacity 0.2s linear;
-    -ms-transition: opacity 0.2s linear;
-    transition: opacity 0.2s linear; }
+    -webkit-transition: visibility 0s linear 0.5s, opacity 0.2s linear;
+    -ms-transition: visibility 0s linear 0.5s, opacity 0.2s linear;
+    transition: visibility 0s linear 0.5s, opacity 0.2s linear; }
     @media screen and (max-width: 480px) {
       .state2 #header-nav {
         display: inline-block;
         visibility: visible;
         opacity: 1;
-        -webkit-transition: visibility 0s linear 0.5s;
-        -ms-transition: visibility 0s linear 0.5s;
-        transition: visibility 0s linear 0.5s;
-        -webkit-transition: opacity 0.5s linear;
-        -ms-transition: opacity 0.5s linear;
-        transition: opacity 0.5s linear; } }
+        -webkit-transition: visibility 0s linear 0.5s, opacity 0.5s linear;
+        -ms-transition: visibility 0s linear 0.5s, opacity 0.5s linear;
+        transition: visibility 0s linear 0.5s, opacity 0.5s linear; } }
     @media screen and (max-height: 600px) and (orientation: landscape) {
       .state2 #header-nav {
         display: inline-block;
         visibility: visible;
         opacity: 1;
-        -webkit-transition: visibility 0s linear 0.5s;
-        -ms-transition: visibility 0s linear 0.5s;
-        transition: visibility 0s linear 0.5s;
-        -webkit-transition: opacity 0.5s linear;
-        -ms-transition: opacity 0.5s linear;
-        transition: opacity 0.5s linear;
+        -webkit-transition: visibility 0s linear 0.5s, opacity 0.5s linear;
+        -ms-transition: visibility 0s linear 0.5s, opacity 0.5s linear;
+        transition: visibility 0s linear 0.5s, opacity 0.5s linear;
         position: relative;
         top: 50%;
         -webkit-transform: translateY(-50%);
@@ -539,12 +527,9 @@ p {
       padding-top: 40px;
       visibility: visible;
       opacity: 1;
-      -webkit-transition: visibility 0s linear 0.5s;
-      -ms-transition: visibility 0s linear 0.5s;
-      transition: visibility 0s linear 0.5s;
-      -webkit-transition: opacity 0.5s linear;
-      -ms-transition: opacity 0.5s linear;
-      transition: opacity 0.5s linear; }
+      -webkit-transition: visibility 0s linear 0.5s, opacity 0.5s linear;
+      -ms-transition: visibility 0s linear 0.5s, opacity 0.5s linear;
+      transition: visibility 0s linear 0.5s, opacity 0.5s linear; }
 
 @media screen and (max-height: 600px) and (orientation: landscape) {
   #collapsed-menu {
@@ -561,24 +546,18 @@ p {
 .state1 #collapsed-menu {
   visibility: hidden;
   opacity: 0;
-  -webkit-transition: visibility 0s linear 0.5s;
-  -ms-transition: visibility 0s linear 0.5s;
-  transition: visibility 0s linear 0.5s;
-  -webkit-transition: opacity 0.2s linear;
-  -ms-transition: opacity 0.2s linear;
-  transition: opacity 0.2s linear; }
+  -webkit-transition: visibility 0s linear 0.5s, opacity 0.2s linear;
+  -ms-transition: visibility 0s linear 0.5s, opacity 0.2s linear;
+  transition: visibility 0s linear 0.5s, opacity 0.2s linear; }
   @media screen and (max-width: 480px) {
     .state1 #collapsed-menu {
       display: none; } }
 .state2 #collapsed-menu {
   visibility: visible;
   opacity: 1;
-  -webkit-transition: visibility 0s linear 0.5s;
-  -ms-transition: visibility 0s linear 0.5s;
-  transition: visibility 0s linear 0.5s;
-  -webkit-transition: opacity 0.5s linear;
-  -ms-transition: opacity 0.5s linear;
-  transition: opacity 0.5s linear;
+  -webkit-transition: visibility 0s linear 0.5s, opacity 0.5s linear;
+  -ms-transition: visibility 0s linear 0.5s, opacity 0.5s linear;
+  transition: visibility 0s linear 0.5s, opacity 0.5s linear;
   margin-top: 40px; }
   @media screen and (max-width: 480px) {
     .state2 #collapsed-menu {
@@ -586,21 +565,15 @@ p {
   .state2 #collapsed-menu:hover {
     visibility: hidden;
     opacity: 0;
-    -webkit-transition: visibility 0s linear 0.5s;
-    -ms-transition: visibility 0s linear 0.5s;
-    transition: visibility 0s linear 0.5s;
-    -webkit-transition: opacity 0.2s linear;
-    -ms-transition: opacity 0.2s linear;
-    transition: opacity 0.2s linear; }
+    -webkit-transition: visibility 0s linear 0.5s, opacity 0.2s linear;
+    -ms-transition: visibility 0s linear 0.5s, opacity 0.2s linear;
+    transition: visibility 0s linear 0.5s, opacity 0.2s linear; }
 .expanded + #collapsed-menu {
   visibility: hidden;
   opacity: 0;
-  -webkit-transition: visibility 0s linear 0.5s;
-  -ms-transition: visibility 0s linear 0.5s;
-  transition: visibility 0s linear 0.5s;
-  -webkit-transition: opacity 0.2s linear;
-  -ms-transition: opacity 0.2s linear;
-  transition: opacity 0.2s linear; }
+  -webkit-transition: visibility 0s linear 0.5s, opacity 0.2s linear;
+  -ms-transition: visibility 0s linear 0.5s, opacity 0.2s linear;
+  transition: visibility 0s linear 0.5s, opacity 0.2s linear; }
 
 #sections::before {
   content: " ";
